login and logout work, logout button is revealed after login, login form is hidden after login and releaved after logout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button class="nav__findMovie">Find Movie</button>
         <button class="nav__searchMyMovies">Search My Movies</button>
         <!-- Logout button will be hidden by default until user is logged in -->
-        <button class="nav__logout">Logout</button>
+        <button class="nav__logoutBtn hidden">Logout</button>
     </nav>
 
     <header class="header">
