added ability to register new user and current user email displays in navbar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <input type="text" name="search" placeholder="...search" />
         <button class="nav__findMovie">Find Movie</button>
         <button class="nav__searchMyMovies">Search My Movies</button>
+        <span class="nav__userDisplay"></span>
         <!-- Logout button will be hidden by default until user is logged in -->
         <button class="nav__logoutBtn hidden">Logout</button>
     </nav>
@@ -33,6 +34,8 @@
     </section>    <!-- end of login page -->
     
     <section class="movieResults center">
+        <header class="movieResults__header center">
+        </header>
         <p> -- PLACEHOLDER SEARCH RESULTS -- </p>
     </section>    <!-- end of movieResults page -->
     
