--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="./styles/renderer.css">
     <link rel="stylesheet" href="./styles/styles.css">
 
 </head>
