added a no matches found alert when a search returns nothing

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </section>
         </section>    <!-- end of movieResults page -->
         
-        <section class="trackedMovies center-align">
+        <section class="trackedMovies hidden center-align">
             <button class="trackedMovies__unwatchedMovies btn waves-effect waves-light">Unwatched Movies</button>
             <button class="trackedMovies__watchedMovies btn waves-effect waves-light">Watched Movies</button>
             <section class="row">
