--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
     <nav class="nav">
 
         <span class="nav__userDisplay col s6"></span>
+        <!-- <div class="nav__logo col s6">Movies History</div> -->
         <!-- Logout button will be hidden by default until user is logged in -->
-        <div class=" right col s6">
+        <div class="right col s6">
             <button class="nav__logoutBtn hidden btn waves-effect waves-light white black-text">Logout</button>
         </div>
     </nav>
     <div class="siteContent container">
-        <div class="row search">
+        <div class="search row hidden">
             <div class="search__input input-field col s7">
-                <input type="text" name="search" id="searchField" />
+                <input type="search" name="search" id="searchField" />
                 <label for="searchField">Search</label>
             </div>
             <div class="search__buttons col s5 valign-wrapper"></div>
@@ -35,7 +36,10 @@
             <h1 class="header__text center-align">Movie History</h1>
         </header>
 
-        <section class="login">
+        <section class="login center">
+            <header class="login__header">
+                <h4>Login</h4>
+            </header>
             <form class="login__form">
                 <div class="input-field">
                     <input type="email" name="login__email" id="email" class="validate" />
