working on updating firebase with rating

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
             <div class="modal-content">
                 <h1>RATE THIS MOVIE!</h>
                     <ul class="movie-rating">
-                        <li class='movie-rating__item1'></li>
-                        <li class='movie-rating__item2'></li>
-                        <li class='movie-rating__item3'></li>
-                        <li class='movie-rating__item4'></li>
-                        <li class='movie-rating__item5'></li>
+                        <li id="star_1" class='movie-rating__item'></li>
+                        <li id="star_2" class='movie-rating__item'></li>
+                        <li id="star_3" class='movie-rating__item'></li>
+                        <li id="star_4" class='movie-rating__item'></li>
+                        <li id="star_5" class='movie-rating__item'></li>
                     </ul>
             </div>
             <div class="modal-footer">
