moved hiding to before xhr and html cleanup

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <nav class="nav">
 
         <span class="nav__userDisplay col s6"></span>
-        <!-- <div class="nav__logo col s6">Movies History</div> -->
         <!-- Logout button will be hidden by default until user is logged in -->
         <div class="right col s6">
             <button class="nav__logoutBtn hidden btn waves-effect waves-light white black-text">Logout</button>
@@ -52,9 +51,7 @@
             </form>
             <button class="login__loginBtn btn waves-effect waves-light">Login</button>
             <button class="login__registerBtn btn waves-effect waves-light red">Register</button>
-        </section>
-        <!-- end of login page -->
-
+        </section><!-- end of login page -->
         <section class="movieResults center-align">
             <header class="movieResults__header center-align ">
 
@@ -76,7 +73,7 @@
                 </section>
             </section>
           </section>
-        </section>       <!-- end of trackedMovies page -->
+        </section><!-- end of trackedMovies page -->
   
         <div id="rating__modal" class="modal">
             <div class="modal-content">
@@ -92,8 +89,7 @@
             <div class="modal-footer">
                 <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Confirm</a>
             </div>
-        </div>
-        <!-- end of movie rating modal page -->
+        </div><!-- end of movie rating modal page -->
 
     </div>
     <footer class="footer"></footer>
